--- a/_posts/教程/2015-10-08-Use-Blog.md
+++ b/_posts/教程/2015-10-08-Use-Blog.md
@@ -3,9 +3,11 @@ layout: post
 title:  "怎么使用WISER网站"
 date:   2015-10-08 7:35:59
 categories: 
-- Policy 
+- 教程 
 tags:
 - WISER
+- Github
+- Jekyll
 
 ---
 
@@ -79,5 +81,4 @@ git push -u origin master
 稍等片刻，打开<http://wise-r.github.io/>就能看到你的blog了。
 
 > 时间有些紧张，就简单的写一些，有疑问，请`Google`,或查看我用的模版<https://github.com/dbtek/dbyll>
-
 
